Get the status client summary to show a percentage.

--- a/TODO
+++ b/TODO
@@ -82,3 +82,5 @@
    - Reload conf and close and reopen the main logfile on SIGHUP.
    - Uncomment the reload lines in the init script.
    - Add a logrotate conf file.
+
+* Looks like the manifest.gz.tmp.tmp problem is back in working dir recovery.
