--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
   * Get the client to pass its version to the server. The minimum version the
     client needs to be is now this release.
   * Get the server to warn when the client is on a different version.
+  * Put the number of warnings in the subject of the notification emails.
 
 2011-07-26 Changes in burp-1.1.70:
   * FreeBSD ACL support.
