--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,8 @@
   * Implement main server process config reload functionality on SIGHUP.
   * Uncomment the reload lines in the Debian init script.
   * Add logrotate file for Debian.
+  * Add ability to send a regular snapshot of the status summary screen in an
+	email ("daily backup summary").
 
 2011-07-26 Changes in burp-1.1.70:
   * FreeBSD ACL support.
