Small tweaks. Also open the logfile correctly on resume.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,7 +13,7 @@
   * Uncomment the reload lines in the Debian init script.
   * Add logrotate file for Debian.
   * Add ability to send a regular snapshot of the status summary screen in an
-	email ("daily backup summary").
+	email ("daily backup summary" feature).
 
 2011-07-26 Changes in burp-1.1.70:
   * FreeBSD ACL support.
