Add docs directory. Add Windows 7 bare metal steps. Add to CONTRIBUTORS.

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Make sure that you have openssl, zlib and librsync libraries and development
 libraries installed. With debian or ubuntu, this command should install them
 for you:
 apt-get install librsync-dev libz-dev libssl-dev
-Change to the burp source directory and run "./configure --prefix=/usr",
+Change to the burp source directory and run "./configure",
 then "make".
 All being well, burp will compile successfully.
 Then run "make install" as root to install.
