--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2011-09-09 Changes in burp-1.2.0:
   * Improvements to the counters and status monitor - remember the phase1
     scan counters for later phases to use for things like estimated times.
   * Add 'working_dir_recovery_method = resume' option, which continues a
@@ -15,6 +16,7 @@
   * Add ability to send a regular snapshot of the status summary screen in an
 	email ("daily backup summary" feature).
   * Add simple 'exclude_ext =' feature.
+  * Add Windows 7 bare metal restore instructions.
 
 2011-07-26 Changes in burp-1.1.70:
   * FreeBSD ACL support.
