--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.2.0) unstable; urgency=low
+
+  * update to 1.2.0
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Fri, 09 September 2011 20:20:00 +0000
+
 burp (1.1.70) unstable; urgency=low
 
   * update to 1.1.70
