--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+  * Allow hardlinked_archive to be set on a cycle, instead of just being
+    either on or off. For example, set it to '7' to have every seventh backup
+    be hardlinked.
+
 2011-09-09 Changes in burp-1.2.0:
   * Improvements to the counters and status monitor - remember the phase1
     scan counters for later phases to use for things like estimated times.
