--- a/TODO
+++ b/TODO
@@ -77,3 +77,5 @@
 * Network rate-limiting feature (both client and server).
 
 * Windows non-VSS backups.
+
+* Investigate how to make massive files work better with librsync.
