Option to prune down the number of backups kept back into the past. For example, keep=7 keep=4 keep=6 (on separate lines) will keep 7 daily backups, 4 weekly backups (7x4=28), and 6 multiples of 4 weeks (7x4x6=168). You can have as many 'keep' lines as you like.

--- a/TODO
+++ b/TODO
@@ -79,3 +79,7 @@
 * Windows non-VSS backups.
 
 * Investigate how to make massive files work better with librsync.
+
+* Send notification email only on error or warnings.
+
+* Client version warning on the server does not end up in a backup log.
