--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
-  * Allow hardlinked_archive to be set on a cycle, instead of just being
-    either on or off. For example, set it to '7' to have every seventh backup
-    be hardlinked.
+  * Option to prune down the number of backups kept back into the past. For
+    example, keep=7 keep=4 keep=6 (on separate lines) will keep 7 daily
+    backups, 4 weekly backups (7x4=28), and 6 multiples of 4 weeks (7x4x6=168).
+    You can have as many 'keep' lines as you like.
 
 2011-09-09 Changes in burp-1.2.0:
   * Improvements to the counters and status monitor - remember the phase1
