--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@
     backups, 4 weekly backups (7x4=28), and 6 multiples of 4 weeks (7x4x6=168).
     You can have as many 'keep' lines as you like.
   * Make sure the client version warning message appears in the backup log.
+  * Network send rate-limiting feature (both client and server).
+  * Change pidfile paths to /var/run/burp instead of /var/lock/burp.
 
 2011-09-09 Changes in burp-1.2.0:
   * Improvements to the counters and status monitor - remember the phase1
