--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -166,6 +166,9 @@ Run as a particular group. This can be overridden by the client configuration fi
 \fBumask=[umask]\fR
 Set the file creation umask. Default is 0022.
 .TP
+\fBratelimit=[Mb/s]\fR
+Set the network send rate limit, in Mb/s. If this option is not given, burp will send data as fast as it can.
+.TP
 \fBworking_dir_recovery_method=[resume|merge|use|delete]\fR
 This option tells the server what to do when it finds the working directory of an interrupted backup (perhaps somebody pulled the plug on the server, or something). This can be overridden by the client configurations files in clientconfdir
 on the server. Options are...
@@ -250,6 +253,9 @@ Run as a particular user (not supported on Windows).
 .TP
 \fBgroup=[groupname]\fR
 Run as a particular group (not supported on Windows).
+.TP
+\fBratelimit=[Mb/s]\fR
+Set the network send rate limit, in Mb/s. If this option is not given, burp will send data as fast as it can.
 .TP
 \fBinclude=[path]\fR
 Path to include in the backup. You can have multiple include lines. Use forward slashes '/', not backslashes '\\' as path delimiters.
