--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,6 @@
-  * Option to prune down the number of backups kept back into the past. For
-    example, keep=7 keep=4 keep=6 (on separate lines) will keep 7 daily
-    backups, 4 weekly backups (7x4=28), and 6 multiples of 4 weeks (7x4x6=168).
-    You can have as many 'keep' lines as you like.
+  * Multiple retention periods (e.g, keep 1 backup per day for 7 days, 1
+    backup per week for 4 weeks, 1 backup per 4 weeks for a year). See the
+    'keep' option in the man page.
   * Make sure the client version warning message appears in the backup log.
   * Network send rate-limiting feature (both client and server).
   * Change pidfile paths to /var/run/burp instead of /var/lock/burp.
