--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.2.2) unstable; urgency=low
+
+  * update to 1.2.2
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Thu, 29 September 2011 21:00:00 +0000
+
 burp (1.2.0) unstable; urgency=low
 
   * update to 1.2.0
