--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -214,6 +214,9 @@ Path to the script to run when a backup succeeds. User arguments are appended af
 \fBnotify_success_arg=[string]\fR
 A user-definable argument to the notify success script. You can have many of these. The notify_success_arg options can be overriddden by the client configuration files in clientconfdir on the server.
 .TP
+\fBnotify_success_warnings_only=[0|1]\fR
+Set to 1 to send success notifications only when there were warnings. Leave unset or set to 0 to send success notifications for every backup.
+.TP
 \fBnotify_failure_script=[path]\fR
 The same as notify_success_script, but for backups that failed.
 .TP
@@ -361,6 +364,7 @@ Additionally, the following options can be overridden here for each client:
 \fBtimer_arg\fR
 \fBnotify_success_script\fR
 \fBnotify_success_arg\fR
+\fBnotify_success_warnings_only\fR
 \fBnotify_failure_script\fR
 \fBnotify_failure_arg\fR
 
