--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+  * Add a network_timeout parameter. Default is 7200 seconds (2 hours).
   * Add option to send success notifications only if there were warnings.
 
 2011-09-29 Changes in burp-1.2.2:
