--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -169,6 +169,9 @@ Set the file creation umask. Default is 0022.
 \fBratelimit=[Mb/s]\fR
 Set the network send rate limit, in Mb/s. If this option is not given, burp will send data as fast as it can.
 .TP
+\fBnetwork_timeout=[s]\fR
+Set the network timeout in seconds. If no data is sent or received over a period of this length, burp will give up. The default is 7200 seconds (2 hours).
+.TP
 \fBworking_dir_recovery_method=[resume|merge|use|delete]\fR
 This option tells the server what to do when it finds the working directory of an interrupted backup (perhaps somebody pulled the plug on the server, or something). This can be overridden by the client configurations files in clientconfdir
 on the server. Options are...
@@ -259,6 +262,9 @@ Run as a particular group (not supported on Windows).
 .TP
 \fBratelimit=[Mb/s]\fR
 Set the network send rate limit, in Mb/s. If this option is not given, burp will send data as fast as it can.
+.TP
+\fBnetwork_timeout=[s]\fR
+Set the network timeout in seconds. If no data is sent or received over a period of this length, burp will give up. The default is 7200 seconds (2 hours).
 .TP
 \fBinclude=[path]\fR
 Path to include in the backup. You can have multiple include lines. Use forward slashes '/', not backslashes '\\' as path delimiters.
