--- a/TODO
+++ b/TODO
@@ -77,3 +77,5 @@
 * Windows non-VSS backups.
 
 * Investigate how to make massive files work better with librsync.
+
+* FIgure out a way to sensibly run bedup.
