--- a/TODO
+++ b/TODO
@@ -84,3 +84,9 @@
   "schtasks.exe Co_minutę" problem.
 
 * Windows XP restore appears to end up with the wrong dates on files.
+
+* Get extra Windows file attributes working (SYSTEM doesn't seem to work, for
+  example - HIDDEN/READONLY do now).
+
+* Get EFS backup/restore working on Windows (FILE_ATTRIBUTE_ENCRYPTED, and
+  special open/read/close functions).
