--- a/TODO
+++ b/TODO
@@ -90,3 +90,8 @@
 
 * Get EFS backup/restore working on Windows (FILE_ATTRIBUTE_ENCRYPTED, and
   special open/read/close functions).
+
+* Add a mechanism that can make clients upgrade automatically.
+  Have a directory on the server to contain the software, and a config
+  option that can go in clientconfdir that says which software each client
+  gets.
