--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2011-11-22 Changes in burp-1.2.4:
   * Add a file deduplication program, "bedup".
   * Add a network_timeout parameter. Default is 7200 seconds (2 hours).
   * Add option to send success notifications only if there were warnings.
