--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.2.4) unstable; urgency=low
+
+  * update to 1.2.4
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Thu, 22 November 2011 20:00:00 +0000
+
 burp (1.2.2) unstable; urgency=low
 
   * update to 1.2.2
