Fix possible segfault when resume mode triggers with nothing to resume.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@
 	backups.
   * Only install clientconfdir/testclient with 'make install' if clientconfdir
     didn't previously exist.
+  * Fix possible segfault when resume mode triggers with nothing to resume.
 
 2011-09-29 Changes in burp-1.2.2:
   * Multiple retention periods (e.g, keep 1 backup per day for 7 days, 1
