--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -278,6 +278,9 @@ Path to exclude from the backup. You can have multiple exclude lines. Use forwar
 \fBexclude_ext=[extension]\fR
 Extensions to exclude from the backup. Case insensitive. You can have multiple exclude extension lines. For example, set 'vdi' to exclude VirtualBox disk images.
 .TP
+\fBmax_file_size=[b/Kb/Mb/Gb]\fR
+Do not back up files that are greater than the specified size. Example: 'max_file_size = 100Mb'. Set to 0 (the default) to have no limit.
+.TP
 \fBcross_filesystem=[path]\fR
 Allow backups to cross a particular filesystem mountpoint.
 .TP
