--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
+2011-11-26 Changes in burp-1.2.5:
+  * Fix critical server path comparison typo bug. If you have been using a
+	1.2.4 server, you need to upgrade immediately!
   * Add a 'max_file_size' option.
+  * Store windows file attributes in a separate field to the standard unix ones.
 
 2011-11-22 Changes in burp-1.2.4:
   * Add a file deduplication program, "bedup".
