--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.2.5) unstable; urgency=low
+
+  * update to 1.2.5
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Sat, 26 November 2011 23:30:00 +0000
+
 burp (1.2.4) unstable; urgency=low
 
   * update to 1.2.4
