Website tweaks, add 'test scripts for release' TODO items.

--- a/TODO
+++ b/TODO
@@ -101,3 +101,6 @@
 * Pass client cert details to server-side pre/post scripts in environment
   variables so that Jason Haar can do cunning things with them (see his mailing
   list email of 2011/11/25.
+
+* Write some automatic test scripts that need to be run before doing a release,
+  which test some basic things.
