--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+  * Add an automated test script.
+  * Make sure to initialise max_file_size, or it gets set to some random
+    number, meaning lots of files might not get backed up.
+
 2011-11-26 Changes in burp-1.2.5:
   * IMPORTANT: Fixed critical path comparison typo bug. If you have been using
 	1.2.4 either as a server or as a client, you need to upgrade
