--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,8 +2,7 @@
   * Fix bugs with uncompressed encrypted backup/restore.
   * Get verify all backups for a client (-a v -b a) to work.
   * Return non-zero if there were warnings on verify or restore.
-  * Make sure to initialise max_file_size, or it gets set to some random
-    number, meaning lots of files might not get backed up.
+  * Fix 'max_file_size' option, add 'min_file_size' option.
 
 2011-11-26 Changes in burp-1.2.5:
   * IMPORTANT: Fixed critical path comparison typo bug. If you have been using
