--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -32,6 +32,9 @@ Run this to connect to a running server to get a live monitor of the status of a
 \fB\-a S\fR \fB\fR
 Similar to '-a s', but it prints the main status monitor summary screen to stdout. The intention is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support.
 .TP
+\fB\-i\fR \fB\fR
+Print an index table of symbols that humans may see burp produce, and exit.
+.TP
 \fB\-l\fR \fB[path]\fR
 Path to log file. The default is stdout. This option overrides the
 .IR logfile
@@ -59,6 +62,9 @@ to restore to.
 \fB\-f\fR \fB[path]\fR
 Short for 'force overwrite'. Without this option set, a restore will not
 overwrite existing files.
+.TP
+\fB\-i\fR \fB\fR
+Print an index table of symbols that humans may see burp produce, and exit.
 .TP
 \fB\-r\fR \fB[regex]\fR
 Short for 'regular expression'. The argument is a regular expression with
@@ -147,6 +153,9 @@ files in clientconfdir on the server. Specify multiple 'keep' entries on separat
 .TP
 \fBhardlinked_archive=[0|1]\fR
 On the server, defines whether to keep hardlinked files in the backups, or whether to generate reverse deltas and delete the original files. Can be set to either 0 (off) or 1 (on). Disadvantage: More disk space will be used Advantage: Restores will be faster, and since no reverse deltas need to be generated, the time and effort the server needs at the end of a backup is reduced.
+.TP
+\fBmax_hardlinks=[number]\fR
+On the server, the number of times that a single file can be hardlinked. The bedup program also obeys this setting. The default is 10000.
 .TP
 \fBlibrsync=[0|1]\fR
 When set to 0, delta differencing will not take place. That is, when a file changes, the server will request the whole new file. The default is 1. This option can be overridden by the client configuration files in clientconfdif on the server.
