--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -44,8 +44,8 @@ to deactivate or '' to reactivate output.
 
 .SH CLIENT OPTIONS
 .TP
-\fB\-a\fR \fB[b|t|r|l|L|v|]\fR
-Short for 'action'. The arguments mean backup, timed backup, restore, list, long list or verify, respectively.
+\fB\-a\fR \fB[b|t|r|l|L|v|e]\fR
+Short for 'action'. The arguments mean backup, timed backup, restore, list, long list, verify, or estimate, respectively.
 .TP
 \fB\-b\fR \fB[number|a]\fR
 Short for 'backup number'. The argument is a number, or 'a' to select all
