Strip out 744 lines of unused Windows code.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@
   * Spot Windows EFS directories and files and warn about them.
   * Add an 'estimate' option (-a e), which does a scan of the file system to
     be backed up, and prints counters, without contacting the server.
+  * Strip out 744 lines of unused Windows code.
 
 2011-11-26 Changes in burp-1.2.5:
   * IMPORTANT: Fixed critical path comparison typo bug. If you have been using
