--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
     after authentication and before disconnecting.
   * Set environment variables from SSL cert details so that the server-side
     scripts can see them.
+  * Add Jason Haar's server script for doing extra SSL certificate checks.
   * Add 'max_hardlinks' option, which limits the number of times a single file
     is hardlinked in storage. Default is 10000.
   * Add '-i' option: print an index table of symbols that humans may see burp
