Add a flexible way of passing new fields from the client to the server so that clients are less likely to have to upgrade. Progress on autoupgrade mechanism.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,6 +19,9 @@
   * Strip out 744 lines of unused Windows code.
   * Fix possible segfault when backup directory forward paths don't match.
   * Removed working_dir_recovery_method=merge. Use 'resume' instead.
+  * Add a flexible way of passing new fields from the client to the server so
+    that clients are less likely to have to upgrade.
+
 
 2011-11-26 Changes in burp-1.2.5:
   * IMPORTANT: Fixed critical path comparison typo bug. If you have been using
