Tweaks for release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.2.7) unstable; urgency=low
+
+  * update to 1.2.7
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Fri, 30 December 2011 22:00:00 +0000
+
 burp (1.2.5) unstable; urgency=low
 
   * update to 1.2.5
