--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2011-12-30 Changes in burp-1.2.7:
   * Add an automated test script.
   * Fix bugs with uncompressed encrypted backup/restore.
   * Get verify all backups for a client (-a v -b a) to work.
@@ -21,7 +22,6 @@
   * Removed working_dir_recovery_method=merge. Use 'resume' instead.
   * Add a flexible way of passing new fields from the client to the server so
     that clients are less likely to have to upgrade.
-
 
 2011-11-26 Changes in burp-1.2.5:
   * IMPORTANT: Fixed critical path comparison typo bug. If you have been using
