Fix bug where attributes on Windows directories were not getting read properly.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Fix bug where attributes on Windows directories were not getting read
+    properly.
   * Fix rounding problem in remaining time estimation in the status monitor.
   * Don't backup the whole file if only ctime changed.
   * Include the client name in arguments to server scripts.
